# riddim-toolkit

./: # Riddim Toolkit  .env.example  .pre-commit-config.yaml  Makefile  One_Drop_C_70.mid  One_Drop_C_70_groove.json  README.md  import pytest  import tkinter as tk  jv1080_patch_database.json  pyproject.toml  requirements.txt
.github/: .gitkeep
docker/: .gitkeep  README.md
docs/: scaffold.md
gcp/: .gitkeep  README.md
notebooks/: README.md
rpi/: .gitkeep  README.md
scripts/: README.md  riddim_generator.py
src/: .gitkeep  README.md
tests/: .gitkeep  README.md  test_riddim_generator.py
