[tool.poetry]
name = "riddim-toolkit"
version = "0.1.0"
description = "MIDI generation system for reggae, rocksteady, and ska rhythm sections."
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mido = "*"
numpy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.mypy]
ignore_missing_imports = true
